# abb_irb4600_description

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: view_robot.rviz
launch/: abb_arm_description.launch  load_abb_irb4600_40_255.launch  test_abb_irb4600_40_255.launch
meshes/collision/: base_link_collision.stl  link1_collision.stl  link2_collision.stl  link3_collision.stl  link4_collision.stl  link5_collision.stl  link6_collision.stl
meshes/visual/: base_link.dae  base_link.stl  link4.dae  link4.stl  link5.dae  link5.stl  link6.dae  link6.stl
rviz/: abb_model_viewer.rviz
urdf/: abb_irb4600_40_255.xacro  abb_irb4600_40_255_macro.xacro
