<?xml version="1.0"?>
<package format="2">
  <name>abb_irb4600_description</name>
  <version>0.1.0</version>
  <description>
  	<p>
	    Support package for ABB IRB 4600 manipulator
	  </p>
  </description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>liburdfdom-tools</buildtool_depend>
  
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
