<?xml version="1.0"?>
<package format="2">
  <name>abb_irb4600_description</name>
  <version>0.1.1</version>
  <description>Support package for ABB IRB 4600 manipulator</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>liburdfdom-tools</buildtool_depend>
  
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
